# tuto_django

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-celery  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/: engagement.odt
project/: Makefile
project/app/: admin.py  apps.py  enums.py  factories.py  fields.py  filters.py  forms.py  managers.py  middleware.py  mixins.py  models.py  schemas.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
project/app/fixtures/: auth_data.json  test_data.json
project/app/migrations/: 0001_initial.py  0002_game_level_game_status.py  0002_question_answer.py  0003_alter_question_and_answer_about_order.py  0003_question_answer.py  0004_alter_answer_options_alter_question_options_and_more.py  0004_alter_player_options_remove_player_email_and_more.py  0005_alter_player_options_player_user.py  0005_play.py  0006_alter_player_profile_activated_alter_player_score.py  0006_play.py  0007_remove_play_play_unicity_constraint_and_more.py  0007_reward.py  0008_gamemaster_teammate_player_polymorphic_ctype_and_more.py  0008_remove_player_creation_datetime_and_more.py  0009_alter_gamemaster_options.py  0009_game_slug.py  0010_activate_postgres_trgm.py  0010_rename_entry_set_play_answer_set_entry.py  0011_genre_game_genre.py  0012_gamemaster_teammate_player_polymorphic_ctype_and_more.py  0013_statgame.py  0014_game_description.py  0015_game_advertise_game_emphasize_game_highlight_and_more.py  0016_rename_entry_set_play_answer_set_entry.py
project/app/templates/: home.html  master.html
project/app/templatetags/: __init__.py  app_utils.py
project/app/tests/: factories.py  test_apis.py  test_commands.py  test_forms.py  test_models.py  test_serializers.py  test_signals.py  test_tasks.py
project/deploy/: pg-docker-compose.yml  prod-docker-compose.yml  restic-docker-compose.yml  traefik-docker-compose.yaml  traefik_tools.py
project/deploy/config/: nginx.conf
project/example/: admin.py  apps.py  enums.py  fields.py  managers.py  models.py  views.py  widgets.py
project/example/fixtures/: test_data.json
project/example/migrations/: 0001_initial.py  0002_sticker_test_color_test_quality_test_size.py  0003_coloredsticker.py  0004_alter_mapping_unique_together_and_more.py  0005_alter_test_ip.py
project/exports/: Django_export.csv  Quizz_export.csv  games_export.csv
project/features/: create_avatar.feature  environment.py  home_page.feature  tutorial.feature
project/project/: celery.py  settings.py  urls.py  views.py
project/static/: README.md
(+34 files in other folders)
